# interview-agent

./: .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  eslint.next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
apps/admin/: Dockerfile  eslint.config.mjs  package.json
apps/admin-console/: Dockerfile  package.json  tsconfig.json
apps/agent-runtime/: Dockerfile  package.json  pyproject.toml  turbo.json
apps/agent-runtime/app/: __init__.py  config.py  errors.py  logging_config.py  main.py  middleware.py  model_gateway.py
apps/agent-runtime/app/schemas/: interview.py
apps/agent-runtime/app/workflows/: interview.py  interview_graph.py
apps/agent-runtime/scripts/: check_structure.py
apps/agent-runtime/tests/: test_checkpoint_integration.py  test_contract_schema.py  test_interview_graph.py  test_model_gateway.py  test_runtime_boundary.py  test_settings.py
apps/api/: Dockerfile  package.json  tsconfig.json  tsconfig.tools.json
apps/product-api/: Dockerfile  jest.config.cjs  package.json
apps/user-portal/: Dockerfile  next.config.js  package.json  tsconfig.json
apps/web/: .eslintrc.json  Dockerfile  package.json
e2e/: admin-governance.spec.ts  user-practice.spec.ts
e2e/helpers/: api.ts  auth.ts
infra/docker/: docker-compose.yml
scripts/: dev-hot-reload.test.mjs  import-agent-interview-hub.ts  start-dev.cmd  start-dev.mjs
参考资料/: 参考项目Review.md
技术方案/: 面试Agent-技术方案.md
需求/: 面试Agent-产品需求文档.md  面试Agent-前期准备冻结稿.md
(+770 files in other folders)
