[project]
name = "interview-agent-runtime"
version = "0.1.0"
description = "FastAPI Agent Runtime for Interview Agent workflows"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.139.2,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "langgraph>=1.2.9,<2.0.0",
  "langgraph-checkpoint-postgres>=3.1.0,<4.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "psycopg[binary,pool]>=3.3.4,<4.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.7.0,<3.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pip-audit==2.10.1",
  "pytest>=8.3.0,<10.0.0",
  "pytest-cov>=6.0.0,<8.0.0",
  "ruff>=0.15.22,<1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
ignore = ["RUF001", "RUF002"]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "C90",
  "E",
  "F",
  "I",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "S",
  "SIM",
  "T20",
  "UP",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 3
max-branches = 10
max-returns = 6
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
show_error_codes = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
